# ndss2019_ginseng_arm-trusted-firmware

./: .gitignore  Makefile
bl2u/aarch64/: bl2u_entrypoint.S
bl31/: bl31.mk  ginseng.c  ginseng_smc_cmd.h
bl31/aarch64/: bl31_entrypoint.S  crash_reporting.S  runtime_exceptions.S
common/: tf_printf.c
include/bl31/: ginseng_rs.h  ginseng_schannel_cmd.h  ginseng_smc_cmd.h  kern_unistd.h  pt_defs.h  schannel.h  schannel_svc.h
include/common/: debug.h
include/lib/el3_runtime/aarch64/: context.h
lib/el3_runtime/aarch64/: context.S  context_mgmt.c
lib/psci/aarch64/: psci_helpers.S
lib/xlat_tables/aarch64/: xlat_tables.c
make_helpers/: build_macros.mk
plat/common/aarch64/: platform_mp_stack.S
plat/hikey/: bl1_plat_setup.c  hikey_def.h  plat_security.c
plat/hikey/drivers/: hisi_pwrc.c
plat/hikey/include/: hi6553.h
plat/hisilicon/hikey/: hikey_bl1_setup.c  hikey_bl31_setup.c  hikey_def.h
plat/hisilicon/hikey/include/: platform_def.h
spath_rust/: .gitignore  Cargo.toml  Makefile.debug  Makefile.release  Xargo.toml
spath_rust/.cargo/: config
spath_rust/src/: aes.rs  aesv8-armx64.S  console.rs  debug.rs  ginsengCmdParser.py  lib.rs  memutil.rs  sha1-armv8.S  sha1.rs
