[package]
name = "spath"
version = "0.1.0"
authors = ["Minhong Yun <mhyun@rice.edu>"]
#include = ["./boardFeature.toml"]

[lib]
name="spath_lib"
crate-type = ["staticlib"]

[dependencies]
linked_list_allocator = "0.5.0"
#linked_list_allocator = "0.4.1"
#linked_list_allocator = "0.3.0"
spin = "0.4.5"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[features]
#qemu = []